# airflow-provider-vespa

./: .env  .gitignore  README.md  docker-compose-2.9.yml  docker-compose.yml  queries.http  test_vespa_threading.py
airflow-provider-vespa/: example_dag.py  pyproject.toml
airflow-provider-vespa/airflow_provider_vespa/: __init__.py  provider.yaml
airflow-provider-vespa/airflow_provider_vespa/hooks/: vespa.py
airflow-provider-vespa/airflow_provider_vespa/operators/: vespa_ingest.py
airflow-provider-vespa/airflow_provider_vespa/triggers/: vespa_feed_trigger.py
airflow-provider-vespa/tests/system/vespa/: example_dag.py
airflow-provider-vespa/tests/unit/hooks/: test_vespa.py
airflow-provider-vespa/tests/unit/operators/: test_vespa_ingest.py
airflow-provider-vespa/tests/unit/triggers/: test_vespa_feed_trigger.py
vespa_app/: services.xml
vespa_app/schemas/: doc.sd
